Updated style and condensed pages

--- a/404.html
+++ b/404.html
@@ -7,30 +7,30 @@
     <title>404 Not Found! | Quozlet.net</title>
 </head>
 
-<body class="min-h-screen sm:max-h-screen sm:min-h-0 bg-blue-800">
+<body class="w-auto bg-gray-900 font-sans">
     <header class="align-bottom">
         <section>
-            <nav class="flex items-center justify-between flex-wrap bg-teal-700 p-1 font-semibold font-sans">
-                <h1 class="flex items-center text-white text-xl tracking-tight"><a href="/">Quozlet.net</a>
-                </h1>
-                <ul class="flex border-b align-bottom text-white">
-                    <li class="mr-1"><a class="inline-block py-2 px-4 hover:text-gray-500" href="/">About</a></li>
-                    <li class="mr-1"><a class="inline-block py-2 px-4 hover:text-gray-500"
-                            href="/minecraft.html">Minecraft Server</a></li>
-                    <li class="-mb-px mr-1 inline-block bg-teal-800 border-b border-l border-r rounded-t py-2 px-4">
-                        ?̢͞?҉́͢?̴̡͝͡͡?̨͟͟͟ ́͟4͠͏͏0͟͏̵4̶̡ ̸̛N͡͞o̷̵͘͟͞t͏͏҉́ ̴̧̨̢͞F͘͜͢o͞҉͢͟u̷̵̶͢͞ņ̸̷̡͡ḑ̶͜ ͜͠?̵͏̢?̵́͘͜?̶̢͢͝
-                    </li>
-                    <li class="mr-1"><a class="inline-block py-2 px-4 hover:text-gray-500"
+            <nav class="flex items-center justify-between flex-wrap bg-teal-900 p-6">
+                <a href="/"
+                    class="font-sans flex-shrink-0 text-white mr-6 font-semibold text-5xl tracking-tight">Quozlet.net</a>
+                <ul class="flex border-0 align-bottom shadow sm:text-2xl text-xl text-gray-400">
+                    <li class="mr-1"><a class="inline-block py-2 px-4 text-gray-400 hover:text-white hover:bg-teal-800"
+                            href="/">About</a></li>
+                    <li class="mr-1"><a class="inline-block py-2 px-4 text-gray-400 hover:text-white hover:bg-teal-800"
+                            href="/minecraft.html">Minecraft
+                            Server</a></li>
+                    <li class="mr-1"><a class="inline-block py-2 px-4 text-white bg-teal-800">???</a></li>
+                    <li class="mr-1"><a class="inline-block py-2 px-4 text-gray-400 hover:text-white hover:bg-teal-800"
                             href="https://github.com/Quozlet/quozlet.github.io">Source Code</a></li>
                 </ul>
             </nav>
         </section>
     </header>
     <main>
-        <div
-            class="bg-gray-200 max-w-screen-md mx-auto rounded-lg mt-5 border-t flex justify-center border-l border-r font-sans text-left text-xl px-6 py-4 shadow-lg font-bold m-2">
-            <p>404 Not Found... </p>
-            <em>(I dunno how you got here... website's not that complicated)</em>
+        <div class="max-w-screen-md mx-auto mt-5 h-auto text-center bg-red-200 border border-red-500 text-red-800 px-4 py-3 rounded relative"
+            role="alert">
+            <strong class="font-bold">404 Not Found</strong>
+            <span class="block sm:inline">The resource is not found!</span>
         </div>
     </main>
 </body>
